--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "bibtex-parse": "^2.1.0",
+    "bibtex-parser-js": "^0.0.2",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
